# serializer version: 1
# name: test_all_entities[switch.ampio_47846_obj_121-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.ampio_47846_obj_121',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dom pusty',
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': 'ampio_47846_obj_121',
    'supported_features': 0,
    'translation_key': 'flag',
    'unique_id': '47846_obj_121',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.ampio_47846_obj_121-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'M-SERV Dom pusty',
    }),
    'context': <ANY>,
    'entity_id': 'switch.ampio_47846_obj_121',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.ampio_47846_obj_61-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.ampio_47846_obj_61',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Podlewanie',
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': 'ampio_47846_obj_61',
    'supported_features': 0,
    'translation_key': 'flag',
    'unique_id': '47846_obj_61',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.ampio_47846_obj_61-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'm-sens salon Podlewanie',
    }),
    'context': <ANY>,
    'entity_id': 'switch.ampio_47846_obj_61',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.ampio_47846_obj_74-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.ampio_47846_obj_74',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': 'ampio_47846_obj_74',
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '47846_obj_74',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.ampio_47846_obj_74-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'switch',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'm-sens salon',
    }),
    'context': <ANY>,
    'entity_id': 'switch.ampio_47846_obj_74',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.ampio_47846_obj_75-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.ampio_47846_obj_75',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.OUTLET: 'outlet'>,
    'original_icon': None,
    'original_name': 'Gniazdo Taras',
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': 'ampio_47846_obj_75',
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '47846_obj_75',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.ampio_47846_obj_75-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'outlet',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'm-sens salon Gniazdo Taras',
    }),
    'context': <ANY>,
    'entity_id': 'switch.ampio_47846_obj_75',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
